// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default heading (Large) matches snapshot 1`] = `
<DocumentFragment>
  <h2
    class="heading lg primary"
  >
    Default heading (Large)
  </h2>
</DocumentFragment>
`;

exports[`Extra large heading matches snapshot 1`] = `
<DocumentFragment>
  <h2
    class="heading xl primary"
  >
    Extra large heading
  </h2>
</DocumentFragment>
`;

exports[`Medium heading matches snapshot 1`] = `
<DocumentFragment>
  <h2
    class="heading md black"
  >
    Medium heading
  </h2>
</DocumentFragment>
`;

exports[`Small heading matches snapshot 1`] = `
<DocumentFragment>
  <h2
    class="heading sm black"
  >
    Small heading
  </h2>
</DocumentFragment>
`;
